# docforge

./: README.md  pyproject.toml
data/: ubuntu_urls.txt
docforge/: cli.py  config.yaml  generation.py  retrieval.py
scripts/: build_corpus.py  build_faiss_index.py  fetch_gitlab_docs.py  fetch_ubuntu_docs.py
